--- a/Web Templates/Yash-sample-movie-post.html
+++ b/Web Templates/Yash-sample-movie-post.html
@@ -22,7 +22,7 @@
 								<strong>
 									<span class="has-inline-color has-background-color">
 										
-										#Released on September 5 on Prime Video#
+										#Premieres on October 2 - Netflix#
 										
 									</span>
 								</strong>
@@ -89,14 +89,20 @@
 		<!-- wp:image {"id":1141,"width":376,"height":163,"sizeSlug":"large"} -->
 		<figure class="wp-block-image size-large is-resized">
 		<p style="font-size:16px;"><b>Watch Movie On </b></p>
-		<a href="   "><img src="https://digitalpremieres.files.wordpress.com/2020/09/netflix-gotham-wiki-fandom-powered-826376.png?w=1024" title="click here to watch the movie" class="wp-image-1141" width="376" height="163" /></figure>
+			
+			
+							<a href=" #Full Movie Link">
+			
+			
+			
+		<img src="https://digitalpremieres.files.wordpress.com/2020/09/netflix-gotham-wiki-fandom-powered-826376.png?w=1024" title="click here to watch the movie" class="wp-image-1141" width="376" height="163" /></figure>
 		<!-- /wp:image -->
 
 		<!-- wp:button {"style":{"color":{"text":"#ffffff"}},"className":"is-style-outline"} -->
 		<div class="wp-block-button is-style-outline"><a class="wp-block-button__link has-text-color" href="#" style="color:#ffffff"><p style="font-size:16px;">
 			
 			<strong>
-				Movie Rating -  7.5/10 
+				Movie Rating -  N/A
 			</strong>
 			
 		<br></p></a></div>
