--- a/Web Templates/Movie Post Templates/movie-post-amazonprime-v1.0.html
+++ b/Web Templates/Movie Post Templates/movie-post-amazonprime-v1.0.html
@@ -1,4 +1,30 @@
 <!-- wp:cover 
+{"url":"https://occ-0-4619-3663.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABWiarBIMY8UX2PlnoUbnOKkPZdFE7unYS6g8zdzNuz46ctLJggiHUmfc-__VWSef-MmggQXENTlR9YdELro0L1CvKs3_.jpg?r=c86", "id":61, "dimRatio":0, "overlayColor":"foreground-dark", "focalPoint":{"x":"0.00","y":"0.50"}, "minHeight":521, "minHeightUnit":"px", "align":"full", "className":"has-background-dim-30 is-style-default"} -->
+
+	<div class="wp-block-cover alignfull 
+	has-foreground-dark-background-color has-background-dim-30 
+	is-style-default" 
+	style="background-image:url(); min-height:521px; background-position:0% 50%"> 
+		<div class="wp-block-cover__inner-container">
+						<!-- wp:image 
+					{"id":62,"width":4096,"height":4096,"sizeSlug":"medium"} -->
+						<figure class="wp-block-image size-large is-resized">
+							
+							#Movie Logo
+							<img src="https://occ-0-4619-2164.1.nflxso.net/dnm/api/v6/tx1O544a9T7n8Z_G12qaboulQQE/AAAABQyEqkfNZXGwd1_U7PMOP4mZfAM04obxbNRUPucbE4ExqgVHyVVSKFKiGE8A7txTxCnopBBJgCOofOZbS6b-mX6bbwbjqHhKjuklFvLvo96YvCQtjnbY0YBWhWVuDPtM3o2YjvlVSnMwqbj39bWAwzaLcoXvzGy9KeIt8E3HoZM-gA.png?r=08a" 
+								title="Movie Poster" 
+								width="4096" 
+								height="4096" />
+								
+						</figure>
+					<!-- /wp:image -->
+		</div>
+	</div>
+<!-- /wp:cover -->
+
+
+
+<!-- wp:cover 
 {"url":"https://images.wallpapersden.com/image/download/new-gradient-5k_72283_1366x768.jpg", "id":61, "dimRatio":0, "overlayColor":"foreground-dark", "focalPoint":{"x":"0.00","y":"0.50"}, "minHeight":121, "minHeightUnit":"px", "align":"full", "className":"has-background-dim-30 is-style-default"} -->
 
 
