--- a/Wordpress Projects/Restaurant Page/Contact.html
+++ b/Wordpress Projects/Restaurant Page/Contact.html
@@ -8,7 +8,7 @@
 
 <!-- wp:columns {"align":"wide","className":"has-2-columns"} -->
 <div class="wp-block-columns alignwide has-2-columns"><!-- wp:column -->
-<div class="wp-block-column"><!-- wp:heading {"align":"left"} -->
+<div class="wp-block-column"><!-- wp:heading {"textAlign":"left"} -->
 <h2 class="has-text-align-left">Get in Touch</h2>
 <!-- /wp:heading -->
 
@@ -48,7 +48,7 @@
 <!-- /wp:column -->
 
 <!-- wp:column -->
-<div class="wp-block-column"><!-- wp:heading {"align":"left"} -->
+<div class="wp-block-column"><!-- wp:heading {"textAlign":"left"} -->
 <h2 class="has-text-align-left">Send Us a Message</h2>
 <!-- /wp:heading -->
 
