--- a/index.html
+++ b/index.html
@@ -1,125 +1,75 @@
-﻿
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+
+
+<!doctype html>
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>▷ YouTube Thumbnail Downloader - Save YT Video Thumbnails</title>
+
+<style>
+  .text-input{width:70%!important}
+  .btn-thumbnailer{background:#fe0000;color:#fff}
+  .btn-thumbnailer:hover{background:#e80000;color:#fff}
+  .btn-thumbnailer:focus{background:#fe0000;color:#fff;outline:0}
+  .btn-thumbnailer a{color:#fff}
+  .nounderline{text-decoration:none!important}
+  .links{text-align:center;margin-bottom:10px}
+  .mobileads{width:100%;clear:both;margin:0;display:none}
+  .entry-content h2{text-align:center;float:none}
+  .mads{width:320px;height:100px}
+  @font-face{font-family:open sans light;
+  font-style:normal;
+  font-weight:300;
+  src:local("Segoe UI Light"),local("Open Sans Light"),local("OpenSans-Light"),url(https://themes.googleusercontent.com/static/fonts/opensans/v8/DXI1ORHCpsQm3Vp6mXoaTZ1r3JsPcQLi8jytr04NNhU.woff) format('woff')}
+  @font-face{font-family:open sans;font-style:normal;
+  font-weight:400;
+  src:local("Segoe UI"),local("OpenSans"),local("OpenSans"),url(https://themes.googleusercontent.com/static/fonts/opensans/v8/K88pR3goAWT7BTt32Z01mz8E0i7KZn-EPnyo3HZu7kw.woff) format('woff')}body{margin:0;font-family:segoe ui,open sans,sans-serif,serif;font-size:.875rem;line-height:1.4;font-weight:400;font-style:normal;background:#f3f5f8}header{box-shadow:0 2px 4px 0 rgba(0,0,68,.1)}
+  .links a{background:#fff;border-radius:3px;color:#000;display:block;border:2px dotted #ccc;margin-bottom:5px;text-transform:uppercase;padding:6px 0;text-decoration:none;transition:all .3s ease}.links a:hover{border-color:#000}nav a{padding:10px 20px;display:inline-block;color:#fff;text-decoration:none;background:#222}nav a:hover{background:#333}.header{text-align:center;background:#06a210}.header nav{background:#058c0d}.header nav a{background:#068c0d;text-transform:uppercase}.header nav a:hover{background:#04820b}.header a.site{text-decoration:none;color:#fff;font-size:35px;padding:5px;display:block}h1{font-size:48px}.links a:hover{opacity:.7}a#thumbnailhq{display:block}.download{position:absolute;right:10px;top:45px;display:block;padding:10px 20px;background:#00bd0f;color:#fff;opacity:.9;text-decoration:none;border-radius:3px;z-index:9999}div#result{position:relative}.download:hover{opacity:1}h2{color:#f1f1f1}.container{max-width:1095px;margin:0 auto;text-align:center}.rightside{float:left;width:300px;margin-top:10px!important;margin-left:15px!important}@media only screen and (max-width:600px){.header a.site{font-size:20px}p.text-center strong{font-size:10px!important;margin:0!important;padding:0!important}h1.entry-title{font-size:25px}header.links a{padding:5px 15px;font-size:10px}.mobileads{display:block!important}}.btn-thumbnailer,input{outline:0;font-size:16px;line-height:24px;padding:15px 25px;box-shadow:0 4px 12px -2px rgba(107,117,161,.5)}.main{text-align:center;max-width:777px;margin:0 auto;float:left}.btn-thumbnailer{background:#fe0000;color:#fff;cursor:pointer}.btn-thumbnailer:hover{background:#d40202}input{border:0;border-radius:4px;color:#797c86}.btn-thumbnailer{border:0;border-radius:2px}input::-webkit-input-placeholder{color:#c7c8cc}input:-moz-placeholder{color:#c7c8cc}input::-moz-placeholder{color:#c7c8cc}input:-ms-input-placeholder{color:#c7c8cc}img#thumbnailpreview{width:100%}ins{background:0 0}h2{color:#fff;float:left;display:inline-block;margin:0;padding:3px 15px;border-radius:4px 4px 0 0;font-size:16px;margin-top:5px;text-transform:uppercase;background:#000}
+</style>
 </head>
 
-<body bgColor='#b7d7e8'>
-<br>
-<div>
- 
-<div class="maincontainer">
-
-<div id="contentwrapper">
-<div id="middlecolumn">
-<form class="convertcase">
-<center><textarea id="stringbox" style="border:2px solid #2a6592;max-width:700px;width:100%;font-size:18px;" rows="8">
-This tool will convert letter case of your text just paste your text here and click on buttons below.
-</textarea>
-<br />
-<b style="font-family:sans-serif;font-size:18px;">Change Case- &nbsp;</b><button onClick="return convertstring(stringbox, 'sentencecase')" style="background-color:#2a6592;color:white;font-family:sans-serif;padding:6px 8px 6px 8px;" title="Make everything lowercase except the first character and 'I'">Sentence</button>
-<button onClick="return convertstring(stringbox, 'titlecase')" style="background-color:#2a6592;color:white;font-family:sans-serif;padding:6px 8px 6px 8px;" title="Capitalize the first character of each word, omitting common stop words like 'and', 'at' etc">Title</button>
-<button onClick="return convertstring(stringbox, 'capitalcase')" style="background-color:#2a6592;color:white;font-family:sans-serif;padding:6px 8px 6px 8px;" title="Capitalize the first character of each word">Capital</button> 
-<button style="background-color:#2a6592;color:white;font-family:sans-serif;padding:6px 8px 6px 8px;" onClick="return convertstring(stringbox, 'lowercase')"Lower Case everything inside the string.">Lower</button> 
-<button onClick="return convertstring(stringbox, 'uppercase')" style="background-color:#2a6592;color:white;font-family:sans-serif;padding:6px 8px 6px 8px;" title="Upper Case everything inside the string.">Upper</button>
-<button style="background-color:#2a6592;color:white;font-family:sans-serif;padding:6px 8px 6px 8px;" onClick="return fieldtoclipboard.copyfield(event, stringbox)">Copy</button>
-
-</form></center>
-<br>
+<body>
+<div class="container">
+<div style="clear:both;margin: 0">
+<div class="mobileads">
 <center>
-<table border="1px;" cellpadding="7" style="font-size:14px;font-family:sans-serif;border-collapse:collapse;">
-<tr >
-	<td><b>Word Count</td></b>
-	<td><span id="wordcount"></span>
-	</td>
-</tr>
-<tr>
-	<td>
-	<b>Character Count</b> </td>
-	<td><span id="charcount"></span></td>
-</tr>
-</table>
 </center>
-<script>
+</div>
+</div>
 
-var stringbox = document.getElementById('stringbox')
-var wordcountspan = document.getElementById('wordcount')
-var charcountspan = document.getElementById('charcount')
-
-
-function convertstring(textarea, action){
-	if (action == 'sentencecase'){
-		textarea.value = sentenceCase(textarea.value)
-	}
-	else if (action == 'titlecase'){
-		textarea.value = toTitleCase(textarea.value)
-	}
-	else if (action == 'capitalcase'){
-		textarea.value = CapitalCase(textarea.value)
-	}
-	else if (action == 'lowercase'){
-		textarea.value = lowerCase(textarea.value)
-	}
-	else if (action == 'uppercase'){
-		textarea.value = upperCase(textarea.value)
-	}
-	return false
-}
-
-function sentenceCase(str){
-	var str = str.toLowerCase().replace(/\si\s/g, ' I ');
-	str = str.charAt(0).toUpperCase() + str.slice(1);
-	return str
-}
-
-function toTitleCase(str){
-  var smallWords = /^(a|an|and|as|at|but|by|en|for|if|in|nor|of|on|or|per|the|to|vs?\.?|via)$/i;
-	var str = str.toLowerCase()
-  return str.replace(/[A-Za-z0-9\u00C0-\u00FF]+[^\s-]*/g, function(match, index, title){
-    if (index > 0 && index + match.length !== title.length &&
-      match.search(smallWords) > -1 && title.charAt(index - 2) !== ":" &&
-      (title.charAt(index + match.length) !== '-' || title.charAt(index - 1) === '-') &&
-      title.charAt(index - 1).search(/[^\s-]/) < 0) {
-      return match.toLowerCase();
-    }
-
-    if (match.substr(1).search(/[A-Z]|\../) > -1) {
-      return match;
-    }
-
-    return match.charAt(0).toUpperCase() + match.substr(1);
-  });
-};
-
-function CapitalCase(str){
-  return str.toLowerCase().split(' ').map(function(word) {
-    return (word.charAt(0).toUpperCase() + word.slice(1));
-  }).join(' ');
-}
-
-function lowerCase(str){
-  return str.toLowerCase();
-}
-
-function upperCase(str){
-  return str.toUpperCase();
-}
-
-function wordandcharcount(){
-	wordcountspan.innerHTML = stringbox.value.split(' ').length
-	charcountspan.innerHTML = stringbox.value.length
-}
+<p class="text-center" style="margin-top:10px;margin-bottom: 0;"><strong style="display: inline-block;
+    padding: 5px 20px;
+    background: #00bd0f;
+    color: #fff;
+    border-radius: 4px 4px 0 0;">Enter the link of a YouTube video below</strong></p>
+   
+   
+<div class="form-group form-inline text-center">
+<input onfocus="this.select()" onmouseover="this.focus()" onclick="this.focus();this.select()" type="url" id="ytlink" placeholder="https://www.youtube.com/watch?v=" class="form-control text-input">
+</div>
 
 
-stringbox.addEventListener('input', function(){
-	wordandcharcount()
-}, false)
+<center><div class="addthis_inline_share_toolbox"></div></center>
+<div class="main">
+<div style="clear:both;width:100%;margin-top: 1%;">
+<div id="imageone" style="width:48%;float:left;position: relative;">
+<h2>Medium</h2>
+<a href="https://www.youtubethumbnaildownloader.com/img.jpg" class="download" download id="hqlink">Download</a>
+<a style="width: 100%;position: relative;" href="/" target="_blank" id="thumbnailmq"><img style="width:100%" id="thumbnailmqimg" title="YouTube Thumbnail Downloader Medium Quality IMAGE" src="https://www.youtubethumbnaildownloader.com/img.jpg"></a>
+</div>
+<div id="imagetwo" style="width:50%;margin-left:2%;float:left;position: relative;">
+<h2>Small</h2>
+<a href="https://www.youtubethumbnaildownloader.com/img.jpg" class="download" download id="mqlink">Download</a>
+<a style="width: 100%;position: relative;" href="/" target="_blank" id="thumbnaillq"><img style="width:100%" id="thumbnaillqimg" title="YouTube Thumbnail Downloader Low Quality IMAGE" src="https://www.youtubethumbnaildownloader.com/img.jpg"></a>
+</div>
+</div>
+<div id="result" style="clear:both">
+<h2>Full HD</h2>
+<a href="https://www.youtubethumbnaildownloader.com/img.jpg" class="download" id="maxreslink" download>Download</a>
 
-wordandcharcount()
+<a href="/" target="_blank" id="thumbnailhq" style="position: relative;"><img id="thumbnailpreview" title="YouTube Thumbnail Downloader FULL HQ IMAGE" alt="YouTube Thumbnail Downloader FULL HQ IMAGE" src="https://www.youtubethumbnaildownloader.com/img.jpg"></a>
 
-</script>
-
-<script src="fieldtoclipboard.js"></script>
 </div>
 </div>
 </div>
