--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <style>
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } 
 .embed-container iframe, 
@@ -8,8 +10,10 @@
 
 <!-- Add youtube watch value-->
 <!-- Example https://www.youtube.com/watch?v=ruWIZcL5T6I -->
-<! -- From above example value is ruWIZcL5T6I -->
-
+<!-- From above example value is ruWIZcL5T6I -->
+<body>
 <div class='embed-container'>
 <iframe src='https://www.youtube.com/embed/<youtube value>' frameborder='0' allowfullscreen></iframe>
 </div>
+</body> 
+</html>
