--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- From above example value is ruWIZcL5T6I -->
 <body>
 <div class='embed-container'>
-<iframe src='https://www.youtube.com/embed/<youtube value>' frameborder='0' allowfullscreen></iframe>
+<iframe src='https://www.youtube.com/embed/ruWIZcL5T6I' frameborder='0' allowfullscreen></iframe>
 </div>
 </body> 
 </html>
