--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 </style>
 
-
-<!-- Add youtube watch value-->
+<!-- Add youtube watch value || Video Id-->
 <!-- Example https://www.youtube.com/watch?v=ruWIZcL5T6I -->
-<!-- From above example value is ruWIZcL5T6I -->
+<!-- From above example value is ruWIZcL5T6I this is Video ID -->
 
 <div class='embed-container'>
 <iframe src='https://www.youtube.com/embed/<video id>' frameborder='0' allowfullscreen></iframe>
 </div>
+
+
 
